--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -267,6 +267,21 @@ podMonitor:
   relabelings: []
   metricRelabelings: []
 
+podMonitoring:
+  ## If true, a PodMonitoring CRD is created for a Google managed prometheus operator
+  ## https://github.com/GoogleCloudPlatform/prometheus-engine/blob/v0.4.1/doc/api.md#podmonitoring
+  ##
+  enabled: false
+  #  namespace: monitoring
+  #  labels: {}
+  interval: 10s
+  timeout: 10s
+  scheme: http
+  targetLabels: {}
+  #  proxyUrl: ""
+  #  limits: {}
+  #  params: {}
+
 prometheusRule:
   ## If true, a PrometheusRule CRD is created for a prometheus operator
   ## https://github.com/coreos/prometheus-operator
